Todo el Header ok

--- a/index.html
+++ b/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Aprender a aprender</title>
 </head>
+
 <body>
     <div class="page">
         <header class="header">
-
+            <img class="logo logo_place_header" src="./images/TripletenLogo.svg" alt="Logo de TripleTen">
+            <h1 class="header__title">Aprende a aprender</h1>
+            <h2 class="header__subtitle">Las técnicas de aprendizaje más eficaces y avanzadas que puedes aplicar en tu
+                vida diaria
+                <a class="header__link" href="#">Más información &rarr;</a>
+            </h2>
+            <img class="header__main-ilustration" src="./images/on_the_edge.png"
+                alt="El ponderador épico se paró en la cima de una montaña a deliberar sobre los puntos más delicados del sistema educativo moderno, mientras también se preguntaba de dónde vino ese triangulo azul gigante">
+            <img class="header__triangle" src="./images/triangle.svg" alt="Imagen de un Triangulo azul">
         </header>
         <main class="content">
             <section class="description">
             </section>
-            
+
             <section class="digits">
             </section>
 
             <section class="feynman">
             </section>
-            
+
             <section class="kaufman">
             </section>
         </main>
@@ -28,4 +39,5 @@
         </footer>
     </div>
 </body>
+
 </html>
